# openmls

./: Cargo.toml
basic_credential/: Cargo.toml
basic_credential/src/: lib.rs
cli/: Cargo.toml
cli/src/: backend.rs  conversation.rs  identity.rs  lib.rs  networking.rs  user.rs
delivery-service/ds-lib/: Cargo.toml
delivery-service/ds-lib/src/: lib.rs
openmls/: Cargo.toml
openmls/src/credentials/: mod.rs
openmls/src/key_packages/: lifetime.rs
openmls_rust_crypto/: Cargo.toml
openmls_rust_crypto/src/: provider.rs
web/: Cargo.toml
web/src/: identity.rs  networking.rs  user.rs
