[package]
name = "cli"
version = "0.1.0"
authors = ["OpenMLS Authors"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
url = "2.2"
reqwest = { version = "0.11", features = ["blocking", "json"] }
base64 = "0.13"
log = "0.4"
pretty_env_logger = "0.4"
tls_codec = { workspace = true }

openmls = { path = "../openmls", features = ["test-utils"] }
ds-lib = { path = "../delivery-service/ds-lib" }
openmls_traits = { path = "../traits" }
openmls_rust_crypto = { path = "../openmls_rust_crypto" }
openmls_memory_keystore = { path = "../memory_keystore" }
openmls_basic_credential = { path = "../basic_credential" }

js-sys = "0.3.67"

wasm-bindgen = "0.2.90"
wasm-bindgen-futures = "0.4.40"

[dependencies.web-sys]
version = "0.3.67"
features = [
  "Window",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response"
]
